background fix och lite wrap

--- a/index.css
+++ b/index.css
@@ -472,6 +472,11 @@ body #wrapper nav a:nth-of-type(4):hover {
     }
 
     /*order*/
+    body {
+        background-image: url(./images/jhbakgrund2.jpeg);
+        background-position: center;
+    }
+
     .right {
         order: 1;
     }
@@ -506,6 +511,27 @@ body #wrapper nav a:nth-of-type(4):hover {
         flex-shrink: 0;
         width: 70px;
     }
+
+    main .bottom div:nth-of-type(1) {
+        order: 1;
+    }
+
+    main .bottom div:nth-of-type(2) {
+        order: 3;
+    }
+
+    main .bottom div:nth-of-type(3) {
+        order: 2;
+    }
+
+    main .bottom div:nth-of-type(4) {
+        order: 4;
+    }
+
+    main .bottom div:nth-of-type(5) {
+        order: 5;
+    }
+
 
 }
 
